[gd_scene load_steps=2 format=1]

[ext_resource path="res://vrc_host/vrchost_ap_detector/vrchost_ap_detector.gd" type="Script" id=1]

[node name="vrchost_ap_detector" type="Node"]

script/script = ExtResource( 1 )

[node name="read_packets_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="access_points" type="Node" parent="."]


